Set iOS deployment target to 15.0
Updated iOS deployment target to 15.0 in Podfile and project settings.

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -7,6 +7,7 @@ jobs:
   build-ios:
     name: 🎉 iOS Build
     runs-on: macos-latest
+
     steps:
       - uses: actions/checkout@v3
 
@@ -14,8 +15,13 @@ jobs:
         with:
           channel: 'stable'
           architecture: x64
+
       - run: flutter pub get
-      
+
+      - name: Force iOS deployment target to 15.0
+        run: |
+          sed -i '' "s/platform :ios, '[0-9.]*/platform :ios, '15.0'/" ios/Podfile
+          sed -i '' "s/IPHONEOS_DEPLOYMENT_TARGET = [0-9.]*/IPHONEOS_DEPLOYMENT_TARGET = 15.0/g" ios/Runner.xcodeproj/project.pbxproj
 
       - run: pod repo update
         working-directory: ios
@@ -25,7 +31,7 @@ jobs:
       - run: mkdir Payload
         working-directory: build/ios/iphoneos
 
-      - run: mv Runner.app/ Payload
+      - run: mv Runner.app Payload
         working-directory: build/ios/iphoneos
 
       - name: Zip output
